# blimp

./: .gitmodules  CMakeLists.txt
cmake/: FindBlimpBuildBox.cmake  FindCryptopp.cmake  FindQt5BaseDir.cmake  FindVLD.cmake
ddl/: blimp_properties.ddl  file_contents.ddl  file_element.ddl  file_elements.ddl  generate_headers.py  indexed_locations.ddl  plugin_kv_store.ddl  snapshot.ddl  snapshot_contents.ddl  snapshots.ddl  sqlite_master.ddl  storage.ddl  storage_containers.ddl  storage_contents.ddl  storage_inventory.ddl  user_selection.ddl
plugins/: CMakeLists.txt
plugins/compression_zlib/: CMakeLists.txt  compression_zlib.cpp  compression_zlib.hpp  compression_zlib.t.cpp
plugins/encryption_aes/: CMakeLists.txt  encryption_aes.cpp  encryption_aes.hpp  encryption_aes.t.cpp
plugins/storage_filesystem/: CMakeLists.txt  storage_filesystem.cpp  storage_filesystem.hpp  storage_filesystem.t.cpp
sdk/: blimp_plugin_helper_cpp.hpp  blimp_plugin_sdk.h
src/: aws_prototype.cpp  exceptions.hpp  file_bundling.cpp  file_bundling.hpp  file_chunk.hpp  file_hash.cpp  file_hash.hpp  file_info.hpp  file_io.cpp  file_io.hpp  file_processor.cpp  file_processor.hpp  file_scanner.cpp  file_scanner.hpp  main.cpp  plugin_common.cpp  plugin_common.hpp  plugin_compression.cpp  plugin_compression.hpp  plugin_encryption.cpp  plugin_encryption.hpp  plugin_key_value_store.cpp  plugin_key_value_store.hpp  plugin_storage.cpp  plugin_storage.hpp  processing_pipeline.cpp  processing_pipeline.hpp  storage.hpp  storage_aws_glacier.hpp  storage_container.hpp  storage_filesystem.hpp  storage_location.hpp  storage_plugin.cpp  storage_plugin.hpp  uuid.hpp  version.hpp  worker_pool.cpp  worker_pool.hpp
src/crypto/: crypto_demo.cpp
src/db/: blimpdb.cpp  blimpdb.hpp  file_element_id.hpp
src/db/table/: blimp_properties.hpp  file_contents.hpp  file_element.hpp  file_elements.hpp  indexed_locations.hpp  plugin_kv_store.hpp  snapshot.hpp  snapshot_contents.hpp  snapshots.hpp  sqlite_master.hpp  storage.hpp  storage_containers.hpp  storage_contents.hpp  storage_inventory.hpp  table_layout.hpp  user_selection.hpp
src/deflate/: zlib_demo.cpp
src/fileio/: fileio_demo.cpp
src/ui/: file_diff_model.cpp  file_diff_model.hpp  filesize_to_string.hpp  filesystem_model.cpp  filesystem_model.hpp  main_window.cpp  main_window.hpp  snapshot_browser.cpp  snapshot_browser.hpp  snapshot_contents_model.cpp  snapshot_contents_model.hpp
test/ui/: filesize_to_string.t.cpp
